2010-01-26  Diego Gonzalez  <diego.gonzalez@openbossa.org>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] DRT WebHistory support
        https://bugs.webkit.org/show_bug.cgi?id=34167

        * platform/qt/Skipped:
2010-01-26  Diego Gonzalez  <diego.gonzalez@openbossa.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] DRT WebHistory support
        https://bugs.webkit.org/show_bug.cgi?id=34167

        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::reset):
        (LayoutTestController::webHistoryItemCount):
        (LayoutTestController::keepWebHistory):
        * DumpRenderTree/qt/LayoutTestControllerQt.h:

Canonical link: https://commits.webkit.org/45278@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53895 268f45cc-cd09-0410-ab3c-d52691b4dbfc